[package]
name = "bridgeburner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "^1.21", features = ["full"] }
hyper = { version = "^1.0.0-rc.3", features = ["full"] }
http-body-util = "0.1.0-rc.2"
hyper-util = { git = "https://github.com/hyperium/hyper-util.git", features = ["full"] }
http = "^0.2.9"
openssl = "^0.10"
tokio-openssl = "^0.6.3"

eframe="^0.21"
egui_extras="^0.21"
